base/deployment-nest-ms.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-ms-deployment
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
      app: nestapp
  replicas: 2
  template:
    metadata:
      labels:
        app: nestapp
    spec:
      imagePullSecrets:
        - name: docker-secret
      serviceAccountName: nest-ms-service-account
      containers:
      - name: nestapp
        image: xyz/details-test:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "256m" 
            memory: "512Mi"
          requests:
            cpu: "256m"
            memory: "512Mi"
