base/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nest-ms-gateway
  namespace: test_base_ns
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "onboarding.test.com"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nest-ms-virtualservice
  namespace: test_base_ns
spec:
  hosts:
  - "onboarding.test.com"
  gateways:
  - nest-ms-gateway
  http:
  - match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: nest-ms-service
        port:
          number: 80
